List getFirst / getLast (#11556)